Integration of callback system into src/generator.c and friends. Also, output from generator.c ==> parser/src/<PROJECT>-parser.c now includes callbacks. Makefile file for main embryo project and generated parser Makefile fixed to handle callback additions.

--- a/parser/Makefile
+++ b/parser/Makefile
@@ -15,6 +15,7 @@ bin/egg-walker: obj/egg-walker.o \
 		obj/egg-token.o \
 		obj/egg-token-util.o \
 		obj/strapp.o \
+		obj/callback.o \
 		obj/input.o
 
 obj/egg-walker.o: src/egg-walker.c \
