More autotools config fixups

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,5 +12,7 @@ embryo_SOURCES = embryo.c generator.c map.c
 egg_walker_SOURCES = egg-walker.c
 
 libegg_common_la_SOURCES = callback.c input.c strapp.c mkdir_p.c
+libegg_common_la_LDFLAGS = -version-info 1:0:1
 
 libegg_parser_la_SOURCES = egg-parser.c egg-token.c egg-token-util.c
+libegg_parser_la_LDFLAGS = -version-info 1:0:1
