Incorporated auto-timestamp.sh into automake

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,3 +16,10 @@ libegg_common_la_LDFLAGS = -version-info 1:0:1
 
 libegg_parser_la_SOURCES = egg-parser.c egg-token.c egg-token-util.c
 libegg_parser_la_LDFLAGS = -version-info 1:0:1
+
+.PHONE: timestamps
+
+timestamps:
+	@$(top_srcdir)/tools/auto-timestamp.sh $(top_srcdir)
+
+all: timestamps all-am
