--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,1 +1,4 @@
 EXTRA_DIST = .egg INSTALL LICENSE PROJECT README TODOS VERSION
+
+docdir = $(datadir)/doc/@PACKAGE@
+doc_DATA = .egg INSTALL LICENSE PROJECT README TODOS VERSION
