--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,4 +1,21 @@
-EXTRA_DIST = .egg INSTALL LICENSE PROJECT README TODOS VERSION
+EXTRA_DIST = .egg printable.egg egg.pdf INSTALL LICENSE PROJECT README TODOS VERSION
 
 docdir = $(datadir)/doc/@PACKAGE@
-doc_DATA = .egg INSTALL LICENSE PROJECT README TODOS VERSION
+doc_DATA = .egg printable.egg egg.pdf INSTALL LICENSE PROJECT README TODOS VERSION
+
+printable.egg: $(srcdir)/.egg
+	@echo Creating printable.egg
+	@if which pr > /dev/null; then pr -F -W 70 -o 10 -h "EGG Grammar Definition" \
+		-D "$$(date -r $(srcdir)/.egg +'rev. %Y%m%d')" \
+		$(srcdir)/.egg > printable.egg; fi
+
+egg.pdf: printable.egg
+	@echo Creating egg.pdf
+	@if which enscript ps2pdf > /dev/null; then enscript -q -t \
+		egg.pdf -B -sPAPERSIZE=letter -o - \
+		printable.egg | ps2pdf -q - egg.pdf; fi
+
+all: egg.pdf all-am
+
+clean-local:
+	-rm -f egg.pdf printable.egg
