Completed autotools configuration and customization, including doxygen support.  NOTE:  doxygen has been reconfigured to no long supply man pages, nor XML output by default.  XML is just not required at this point, and the man pages are not in a "standard" form.  Once the format for the man pages has been resolved, they will be added back in to the doxygen generation, and the autotools installer.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,4 +1,5 @@
 EXTRA_DIST = .egg printable.egg egg.pdf INSTALL LICENSE PROJECT README TODOS VERSION
+SUBDIRS = reference-manual
 
 docdir = $(datadir)/doc/@PACKAGE@
 doc_DATA = .egg printable.egg egg.pdf INSTALL LICENSE PROJECT README TODOS VERSION
