--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,1 +1,3 @@
+EXTRA_DIST = egg-parser.h egg-token.h egg-token-type.h egg-token-util.h generator.h map.h error.h
+
 pkginclude_HEADERS = callback.h common.h input.h mkdir_p.h strapp.h
