--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = src include doc tools
 
-EXTRA_DIST = AUTHORS ChangeLog COPYING INSTALL NEWS README
+EXTRA_DIST = AUTHORS ChangeLog COPYING INSTALL NEWS README packages
 
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@
 doc_DATA = AUTHORS ChangeLog COPYING INSTALL NEWS README
