--- a/doc/reference-manual/doxygen.cfg
+++ b/doc/reference-manual/doxygen.cfg
@@ -196,6 +196,7 @@ TAB_SIZE               = 2
 # You can put \n's in the value part of an alias to insert newlines.
 
 ALIASES                = license="\par License"
+ALIASES               += timestamp="\par Timestamp\n"
 
 # This tag can be used to specify a number of word-keyword mappings (TCL only).
 # A mapping has the form "name=value". For example adding
