change: Changed all doxygen command start chars from '\' to '@' change: egg-mapper.c - fixed long_option bug add: put user-guide under GNU autotools control add: contributed another 25% to user-guide completion.

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT([egg],[0.2.3],[patrickhead@gmail.com])
+AC_INIT([egg],[0.2.4],[patrickhead@gmail.com])
 AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
@@ -32,6 +32,7 @@ AC_CONFIG_FILES([
   include/Makefile
   doc/Makefile
   doc/reference-manual/Makefile
+  doc/user-guide/Makefile
   tools/Makefile
   misc/Makefile
 ])
