--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,7 +19,7 @@ libegg_common_la_LDFLAGS = -version-info 1:0:1
 libegg_parser_la_SOURCES = egg-parser.c egg-token.c egg-token-util.c
 libegg_parser_la_LDFLAGS = -version-info 1:0:1
 
-.PHONE: timestamps
+.PHONY: timestamps
 
 timestamps:
 	@$(top_srcdir)/tools/auto-timestamp $(top_srcdir)
