change:  embryo.1.txt - fixes to Options and License sections change:  man-pages/Makefile.am to include egg-mapper.1.txt and egg-walker.1.txt change:  egg-mapper.c - added --use-external-usage flag change:  generator.c - corrected *-walker.c generation for new usage() scheme change:  src/Makefile.am - added support for egg-walker-usage.inc change:  TOP/Makefile.am - added --user-external-usage=true for parser-code rule add: egg-mapper.1.txt add: egg-walker.1.txt version: bumped minor

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = src include doc tools misc
 
-EXTRA_DIST = AUTHORS ChangeLog COPYING INSTALL NEWS README packages
+EXTRA_DIST = AUTHORS ChangeLog COPYING COPYING_DOCUMENTATION INSTALL NEWS README packages
 
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@
 doc_DATA = AUTHORS ChangeLog COPYING INSTALL NEWS README
@@ -12,7 +12,9 @@ parser-code: src/embryo
 		--email=patrickhead@gmail.com \
 		--author "Patrick Head" \
 		--use-doxygen=true \
-    --code-version=$$(grep AC_INIT configure.ac | sed -e 's/^[^,]*,\[\(.*\)],.*$$/\1/')
+		--code-version=$$(grep AC_INIT configure.ac | \
+											sed -e 's/^[^,]*,\[\(.*\)],.*$$/\1/') \
+		--use-external-usage=true
 
 clean-local:
 	@if [ -d packages ]; then rm -f packages/*; fi
