--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,11 +7,11 @@ lib_LTLIBRARIES = libegg-common.la libegg-parser.la
 
 LDADD = libegg-common.la libegg-parser.la
 
-embryo_SOURCES = embryo.c generator.c map.c
+embryo_SOURCES = embryo.c embryo-usage.inc generator.c map.c
 
-egg_mapper_SOURCES = egg-mapper.c map.c
+egg_mapper_SOURCES = egg-mapper.c egg-mapper-usage.inc map.c
 
-egg_walker_SOURCES = egg-walker.c
+egg_walker_SOURCES = egg-walker.c egg-walker-usage.inc
 
 libegg_common_la_SOURCES = callback.c input.c strapp.c mkdir_p.c
 libegg_common_la_LDFLAGS = -version-info 1:0:1
@@ -28,6 +28,17 @@ embryo-usage.inc: $(top_srcdir)/doc/man-pages/embryo.1.txt
 	@cat $(top_srcdir)/doc/man-pages/embryo.1.txt \
      | $(top_srcdir)/tools/man2usage > embryo-usage.inc
 
-usage-include-files: embryo-usage.inc
+egg-mapper-usage.inc: $(top_srcdir)/doc/man-pages/egg-mapper.1.txt
+	@cat $(top_srcdir)/doc/man-pages/egg-mapper.1.txt \
+     | $(top_srcdir)/tools/man2usage > egg-mapper-usage.inc
+
+egg-walker-usage.inc: $(top_srcdir)/doc/man-pages/egg-walker.1.txt
+	@cat $(top_srcdir)/doc/man-pages/egg-walker.1.txt \
+     | $(top_srcdir)/tools/man2usage > egg-walker-usage.inc
+
+usage-include-files: embryo-usage.inc egg-mapper-usage.inc egg-walker-usage.inc
 
 all: usage-include-files timestamps all-am
+
+clean-local:
+	@rm -f *.inc
